# pytest-linter

./: .gitignore  .pylintrc.example  .repomixignore  .structurelint.yml  ARCHITECTURE.md  CHANGELOG.md  CI_COMMIT_DIAGNOSIS.md  CI_DEBUG_STATUS.md  CI_FIXES_SUMMARY.md  CODE_REVIEW_COMPREHENSIVE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS_PRIORITIZED.md  PHASE1_SUMMARY.md  PROJECT_STATUS.md  QUICK_WINS.md  README.md  RULES.md  WORKFLOW_STATUS.md  action.yml  dist.toml  mkdocs.yml  mutants.toml  pre-commit-hooks.yaml  pyproject.toml  pyproject.toml.example  repomix.config.json  session-ses_2396.md  setup.py  sonar-project.properties  test_all_examples.py
.github/ISSUE_TEMPLATE/: config.yml  false_positive.yml  feature_request.yml
.github/actions/pytest-linter/: action.yml
.github/workflows/: ci.yml  codebase-review.yml  docs.yml  mutation-testing.yml  publish-pypi.yml  publish.yml  pytest-linter-action.yml  release.yml  repomix.yml  security.yml
Formula/: pytest-linter.rb
benches/: engine_bench.rs
docs/: cli-reference.md  comparison.md  configuration.md  getting-started.md  index.md  migration.md
docs/architecture/: ADR-001-project-architecture.md  ADR-002-toolchain.md  ADR-003-quality-gates.md  ADR-004-testing-strategy.md  ADR-005-lint-rule-architecture-and-lsp-server.md
docs/rules/: FLK-001.md  FLK-008.md  FLK-009.md  PYTEST-BDD-001.md  PYTEST-DBC-001.md  PYTEST-FIX-001.md  PYTEST-FIX-003.md  PYTEST-FIX-004.md  PYTEST-FIX-005.md  PYTEST-FIX-006.md  PYTEST-FIX-007.md  PYTEST-FIX-008.md  PYTEST-FIX-009.md  PYTEST-FIX-010.md  PYTEST-FIX-011.md  PYTEST-FIX-012.md  PYTEST-FIX-013.md  PYTEST-FLK-001.md  PYTEST-FLK-002.md  PYTEST-FLK-003.md  PYTEST-FLK-004.md  PYTEST-FLK-005.md  PYTEST-FLK-008.md  PYTEST-FLK-009.md  PYTEST-FLK-010.md  PYTEST-FLK-011.md  PYTEST-INF-001.md  PYTEST-INF-002.md  PYTEST-INF-003.md  PYTEST-INF-004.md  PYTEST-MNT-001.md  PYTEST-MNT-002.md  PYTEST-MNT-003.md  PYTEST-MNT-004.md  PYTEST-MNT-005.md  PYTEST-MNT-006.md  PYTEST-MNT-007.md  PYTEST-MNT-014.md  PYTEST-MNT-015.md  PYTEST-MNT-016.md  (+13 more)
docs/superpowers/specs/: 2026-04-26-ci-workflow-design.md  2026-05-17-core-rule-engine-design.md
examples/: CSharpSampleTest.cs  JavaSampleTest.java  VBNetSampleTest.vb  cpp-sample_test.cpp  go-sample_test.go  rust_sample_test.rs  typescript-sample.test.ts
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
pytest-linter/src/: engine.rs  models.rs  parser.rs
pytest-linter/src/rules/: fixtures.rs  flakiness.rs  maintenance.rs  mod.rs
pytest-linter/tests/: integration_tests.rs
pytest_deep_analysis/: __init__.py  checkers.py  config.py  messages.py  utils.py  xdist_support.py
pytest_deep_analysis/runtime/: README.md  __init__.py  bdd_validator.py  collectors.py  dbc_tracker.py  pbt_analyzer.py  plugin.py  semantic_reporter.py
python-wrapper/: pyproject.toml  setup.py
python-wrapper/pytest_linter_py/: __init__.py  wrapper.py
python-wrapper/pytest_linter_wrapper/: __init__.py  __main__.py
scripts/: auto-request-reviews.sh  generate-rule-docs.py  generate-soak-repo.py  install-pre-commit.sh  run-mutants.sh  wait-for-reviews.sh
src/: config.rs  engine.rs  lib.rs  main.rs  models.rs  parser.rs
src/output/: mod.rs  sarif.rs
src/rules/: fixtures.rs  flakiness.rs  infrastructure.rs  maintenance.rs  mocking.rs  mod.rs
test_linter/: __init__.py  cli.py
test_linter/core/: __init__.py  adapters.py  config.py  engine.py  models.py  parsing_utils.py  rules.py  smells.py  test_cpp_basic.py  test_go_basic.py  test_smells_basic.py  test_typescript_basic.py
test_linter/languages/: __init__.py
test_linter/languages/cpp/: __init__.py  adapter.py
test_linter/languages/csharp/: __init__.py  adapter.py
test_linter/languages/go/: __init__.py  adapter.py
test_linter/languages/java/: __init__.py  adapter.py
test_linter/languages/python/: __init__.py  adapter.py
test_linter/languages/rust/: __init__.py  adapter.py
test_linter/languages/typescript/: __init__.py  adapter.py
test_linter/languages/vbnet/: __init__.py  adapter.py
tests/: conftest.py  golden_tests.rs  integration_tests.rs  soak_tests.rs  test_category1_flakiness.py  test_category1_maintenance.py  test_category3_fixtures.py  test_config.py  test_enhancements.py
tests/golden/: django_patterns.py  fix_006_stateful_session.py  fix_007_chained_mutation.py  flk_001_async_sleep.py  flk_003_network_httpx.py  flk_003_network_mock_clean.py  hypothesis_patterns.py  inf_001_network_ban_missing.py  inf_002_live_unmarked.py  inf_003_monkeypatch_nonidiomatic.py  inf_004_shutil_copy.py  moc_001_patch_definition.py  moc_002_async_magic_mock.py  moc_003_patch_init.py  moc_004_mock_ratio.py  pandas_patterns.py  pytest_patterns.py  val_001_inline_schema.py
tests/subdir/: conftest.py  test_shadowing.py
tests/test_harness/: README.md  __init__.py  base.py  conftest.py  test_category1_flakiness.py  test_category1_maintenance.py  test_category2_fixtures.py  test_category3_fixtures.py  test_enhancements.py  test_semantic_quality.py
vitest-linter/src/: engine.rs  lib.rs  main.rs  models.rs  parser.rs
vitest-linter/src/rules/: flakiness.rs  maintenance.rs  mod.rs
vitest-linter/tests/: integration_tests.rs
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
