[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-linter"
version = "0.2.0"
description = "A multi-language test linter supporting Python, TypeScript, Go, C++, Java, Rust, and C#"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Test Linter Contributors"}
]
keywords = ["testing", "linting", "pytest", "jest", "junit", "static-analysis", "test-quality", "multi-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
]

dependencies = [
    "pylint>=2.15.0",
    "astroid>=2.12.0",
    "tomli>=1.2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0; python_version>='3.9'",
]

[project.urls]
Homepage = "https://github.com/yourusername/pytest-deep-analysis"
Repository = "https://github.com/yourusername/pytest-deep-analysis"
Issues = "https://github.com/yourusername/pytest-deep-analysis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_deep_analysis*", "test_linter*"]

[project.scripts]
test-linter = "test_linter.cli:main"

[project.entry-points."pytest11"]
pytest_deep_analysis_runtime = "pytest_deep_analysis.runtime.plugin"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pytest_deep_analysis", "test_linter"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest-deep-analysis]
# Legacy configuration for pytest-deep-analysis linter
# For new projects, use [tool.test-linter] instead

# Allow specific "magic" constants that are common in your domain
# These will not trigger pytest-mnt-magic-assert warnings
# magic-assert-allowlist = [
#     200, 201, 204,  # HTTP success codes
#     400, 401, 403, 404,  # HTTP client error codes
#     500, 502, 503,  # HTTP server error codes
#     "GET", "POST", "PUT", "DELETE",  # HTTP methods
# ]

[tool.test-linter]
# Multi-language test linter configuration

# General settings
languages = ["python"]  # Supported: python, typescript, javascript, go, cpp, java, rust, csharp
auto-detect-language = true
output-format = "terminal"  # terminal, json
# output-file = "test-linter-report.json"

# Rule settings
max-assertions = 3
max-parametrize-combinations = 20
# disabled-rules = ["UNI-FLK-001"]  # Disable specific rules

# Advanced settings
cross-file-analysis = true
parallel-processing = true
cache-enabled = true

# Python-specific configuration
[tool.test-linter.python]
enabled = true
framework = "pytest"  # or "unittest"
max-assertions = 3
# disabled-rules = []
# magic-assert-allowlist = [200, 201, 404]
# db-commit-methods = ["commit", "save"]
# db-rollback-methods = ["rollback"]

# TypeScript/JavaScript configuration (example)
# [tool.test-linter.typescript]
# enabled = true
# framework = "jest"  # or "mocha", "vitest"
# max-assertions = 3

# Go configuration (example)
# [tool.test-linter.go]
# enabled = true
# framework = "testing"  # or "testify"

# Rule severity overrides
# [tool.test-linter.rules]
# UNI-FLK-001 = "error"  # time-sleep rule
# UNI-MNT-002 = "warning"  # assertion-roulette rule
# UNI-MNT-003 = "off"  # Disable no-assertion rule
