[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-linter"
version = "0.1.0"
description = "Fast, tree-sitter-powered test smell detector for pytest"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["pytest", "linter", "test-smells", "testing", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
pytest-linter = "pytest_linter_wrapper:main"

[tool.hatch.build.targets.wheel]
packages = ["pytest_linter_wrapper"]
